[package]
name = "faulty"
version = "0.0.0"
edition = "2021"
authors = ["Will Brickner"]
description = "Easily write complex programs that perform fallible control tasks."
repository = "https://github.com/wbrickner/faulty"
license = "MIT OR Apache-2.0"
keywords = ["control"]
categories = ["embedded", "no-std", "science::robotics", "finance", ]

[dependencies]
